--- a/package.json
+++ b/package.json
@@ -1,18 +1,52 @@
 {
-  "name": "emırhansarac",
-  "version": "0.0.1",
-  "description": "",
-  "main": "bot.js",
+  "//1": "describes your app and its dependencies",
+  "//2": "https://docs.npmjs.com/files/package.json",
+  "//3": "updating this file will download and update your packages",
+  "name": "hello-express",
+  "ver sion": "0.0.1",
+  "description": "A simple Node app built on Express, instantly up and running.",
+  "main": "app.js",
   "scripts": {
-    "test": "node bot.js"
+    "start": "node app.js"
   },
-  "author": "Emirhan",
-  "license": "ISC",
   "dependencies": {
-    "audit": "0.0.6",
+    "canvas": "^2.0.0-alpha.12",
     "chalk": "^2.4.1",
+    "cleverbot.io": "^1.0.4",
+    "common-tags": "^1.8.0",
     "discord.js": "^11.4.2",
+    "express": "^4.16.3",
+    "jimp": "^0.3.5",
+    "math-expression-evaluator": "^1.2.17",
     "moment": "^2.22.2",
-    "ms": "^2.1.1"
-  }
+    "moment-duration-format": "^2.2.2",
+    "moment-timezone": "^0.5.21",
+    "ms": "^2.1.1",
+    "node-opus": "^0.3.0",
+    "simple-youtube-api": "^5.0.2",
+    "steam-provider": "^0.3.2",
+    "superagent": "^3.8.3",
+    "weather-js": "^2.0.0",
+    "yt-search": "^0.1.4",
+    "ytdl-core": "^0.20.4",
+    "discord.js-commando": "^0.10.0",
+    "sqlite": "^3.0.0",
+    "discord-anti-spam": "^1.1.2",
+    "mc-ping-updated": "^0.1.0",
+    "gifencoder": "^1.1.0",
+    "socket-anti-spam": "^1.1.8",
+    "anti-spam":"^0.2.7"
+  },
+  "engines": {
+    "node": "8.x"
+  },
+  "repository": {
+    "url": "https://glitch.com/edit/#!/hello-express"
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch",
+    "express"
+  ]
 }
